--- a/templates/starter/index.html
+++ b/templates/starter/index.html
@@ -7,6 +7,7 @@
     <!-- Dependencies -->
     <script src="{% static "react/dist/react.js" %}"></script>
     <script src="{% static "react-dom/dist/react-dom.js" %}"></script>
+    <script src="{% static "jquery/dist/jquery.js" %}"></script>
 
     <script type="text/javascript" src="{%  static "dist/bundle.js" %}" charset="utf-8"></script>
     <script defer>
