--- a/templates/starter/index.html
+++ b/templates/starter/index.html
@@ -8,6 +8,7 @@
     <script src="{% static "react.js" %}"></script>
     <script src="{% static "react-dom.js" %}"></script>
     <script src="{% static "jquery.js" %}"></script>
+    <script src="{% static "moment.min.js" %}"></script>
 
     <script type="text/javascript" src="{%  static "dist/bundle.js" %}" charset="utf-8"></script>
     <script defer>
