--- a/starter/static/css/main.css
+++ b/starter/static/css/main.css
@@ -183,6 +183,7 @@ div.calendar div.rendered-event.card {
     position: absolute;
     padding: 1px;
     margin-left: 1px;
+    margin-bottom: 0;
     overflow-y: scroll;
     width: 119px;
 }
