--- a/starter/static/css/main.css
+++ b/starter/static/css/main.css
@@ -182,13 +182,17 @@ div.calendar div.column-container table tbody tr:first-child td {
     border-top: 1px solid rgba(0, 0, 0, .2);
 }
 
-div.calendar div.rendered-event.card {
+div.calendar div.rendered-event-container {
     position: absolute;
+    width: 118px;
+}
+
+div.calendar div.rendered-event-container div.card {
     padding: 1px .25em;
     margin-left: 1px;
     margin-bottom: 0;
     overflow-y: auto;
-    width: 119px;
+    height: 100%;
 }
 
 div.calendar div.current-time-cursor {
@@ -204,6 +208,13 @@ div.calendar div.current-time-cursor {
 div.calendar div.column-container tr td.-selected {
     background-color: rgba(255, 255, 255, .84);
     border: none;
+}
+
+div.calendar div.rendered-event-container div.draggable-event-end {
+    cursor: ns-resize;
+    width: 100%;
+    height: 7px;
+    margin-top: -3px;
 }
 
 /* End of Calendar CSS */
