--- a/starter/static/css/main.css
+++ b/starter/static/css/main.css
@@ -1,6 +1,6 @@
 body {
     background: #fbf6e3;
-    color: #586e75;
+    color: #657b83;
 }
 
 div.card {
@@ -9,8 +9,8 @@ div.card {
     margin: 0 0 10px 0;
     padding: 20px;
     border-radius: 3px;
-    background: #073642;
-    color: #93a1a1;
+    background: #eee8d5;
+    color: #586e75;
     -webkit-tap-highlight-color: transparent;
     box-sizing: border-box;
     display: block;
@@ -36,7 +36,7 @@ div.header-container div.view-mode-selector {
 div.header-container div.view-mode-selector a.view-mode-option {
     margin-right: 1em;
     text-decoration: none;
-    color: #586e75;
+    color: #657b83;
 }
 
 div.header-container div.view-mode-selector a.view-mode-option.-selected {
@@ -300,7 +300,7 @@ div.calendar div.rendered-event-container div.draggable-event-end {
 div.calendar div.rendered-event-container div.tag.card {
     overflow-y: hidden;
     background: #fbf6e3;
-    color: #586e75;
+    color: #657b83;
 }
 
 /* End of Calendar CSS */
