--- a/templates/starter/index.html
+++ b/templates/starter/index.html
@@ -11,6 +11,7 @@
     <script src="{% static "moment.min.js" %}"></script>
     <script src="{% static "ReactRouter.min.js" %}"></script>
 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="{%  static "dist/bundle.js" %}" charset="utf-8"></script>
     <script defer>
         AppRenderer({{ props|safe }})
