--- a/starter/static/css/main.css
+++ b/starter/static/css/main.css
@@ -187,12 +187,14 @@ div.calendar div.full-column-container {
     display: flex;
     align-items: center;
     flex-direction: column;
+    height: calc(100vh - 140px); /* 140px is the height of the header */
+    padding: 0 2em;
 }
 
 div.calendar div.full-column-container div.header-and-content-container {
-    resize: both;
     overflow: hidden;
-    height: 660px;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -225,7 +227,6 @@ div.calendar div.all-columns-container {
     overflow-y: auto;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     border-top: 1px solid rgba(0, 0, 0, .2);
-    margin-bottom: .5em;
 }
 
 div.calendar div.column-container {
@@ -373,8 +374,9 @@ div.tokens-container {
 
 div.rendered-token {
     display: flex;
-    margin-left: .25em;
     padding: .1em .25em;
+    margin-top: -2px;
+    margin-bottom: 10px;
 }
 
 div.rendered-token div.remove-token {
@@ -398,8 +400,33 @@ div.modal-container div.background {
     justify-content: center;
 }
 
+div.modal.card {
+    min-width: 350px;
+}
+
+div.modal h3 {
+    margin: 0;
+}
+
 div.modal-container div.cancel-button-container {
     cursor: pointer;
     float: right;
+}
+
+div.modal label {
+    display: block;
+    padding-top: .5em;
+}
+
+div.modal input,textarea,select {
+    width: 100%;
+}
+
+div.modal input[type=button] {
+    margin-top: .5em;
+}
+
+div.modal div.rendered-token {
+    margin-top: 0;
 }
 /* End of Modal CSS */
