--- a/templates/starter/index.html
+++ b/templates/starter/index.html
@@ -12,7 +12,7 @@
     <script src="{% static "ReactRouter.min.js" %}"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="{%  static "dist/bundle.js" %}" charset="utf-8"></script>
+    <script type="text/javascript" src="{% if debug %}{%  static "dist/dev/bundle.js" %}{% else %}{% static "dist/bundle.js" %}{% endif %}" charset="utf-8"></script>
     <script defer>
         AppRenderer({{ props|safe }})
     </script>
