--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -34,5 +34,5 @@
 
 {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="/auth/password_reset">Lost password?</a></p>
-
+<p><a href="/auth/register">Register</a></p>
 {% endblock %}
